--- a/src/Components/DemosNews/DemosNews.module.css
+++ b/src/Components/DemosNews/DemosNews.module.css
@@ -56,6 +56,7 @@
         background-color: #000033;
         height: 25px;
         border-radius: 4px;
+        color: white;
     }
 }
 
@@ -116,6 +117,7 @@
         background-color: #000033;
         height: 25px;
         border-radius: 4px;
+        color: white;
     }
 }
 
